fix: fix navlinks overflowing

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -69,7 +69,7 @@
                 display: flex;
                 align-items: center;
                 background-color: whitesmoke;
-                width: 300px;
+                width: 240px;
                 padding: .2rem;
                 
 
@@ -93,10 +93,8 @@
         .section-title {
             font-size: 18px;
             font-weight: bold;
-        }        
-
+        }
     }
-
 
     .bottom-wrapper {
         padding: .2rem 5rem;
